fix(extension): vertical align button text

--- a/packages/vscode-extension/src/controls/QuickStart.scss
+++ b/packages/vscode-extension/src/controls/QuickStart.scss
@@ -149,6 +149,7 @@
       align-items: center;
       text-align: center;
       font-weight: normal;
+      margin-bottom: 1px;
     }
   }
 
